jdk version set to fix the build